--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
 
+    //redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // 롬복 사용
     testCompileOnly 'org.projectlombok:lombok'
@@ -42,8 +44,9 @@ dependencies {
 
     implementation 'com.google.guava:guava:30.1-jre'
 
-    // jwt
-    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    testImplementation "org.testcontainers:testcontainers:1.19.2"
+    testImplementation "org.testcontainers:junit-jupiter:1.19.2"
+
 
     //javax
     implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
